# memseal

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
benches/: base_bench.rs  full_bench.rs  secure_vault_bench.rs
src/: constants.rs  lib.rs
src/crypto/: aad_aead.rs  encdec_trait.rs  mod.rs  nonce_rotation.rs  utils.rs
src/mem/: mod.rs  secure_memory_vault.rs
src/vault/: facade.rs  mod.rs  vault_error.rs  vault_header.rs  vault_index.rs
